Tests/CompilerTests/negative/unterminated-call-at-eof.hylo
//! stage:parsing no-std

fun f() {
  _ = f(
}

subscript x(){
  _ = x[
}
